<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.wpisen.trace.service</groupId>
    <artifactId>trace-service</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding><!-- compile插件 -->
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding><!-- site插件  -->
        <maven.compiler.target>1.7</maven.compiler.target>
        <locales>en_US</locales><!-- site插件  -->
        <surefire-report-maven-plugin.version>2.16</surefire-report-maven-plugin.version>
        <maven-project-info-reports-plugin.version>2.7</maven-project-info-reports-plugin.version>
        <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
        <javax.servlet.version>3.1.0</javax.servlet.version>
        
        
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
		<junit.version>4.12</junit.version>
		<skip_maven_deploy>true</skip_maven_deploy>
		<java_source_version>1.8</java_source_version>
		<java_target_version>1.8</java_target_version>

		<spring.version>4.3.10.RELEASE</spring.version>
		<jackson.version>2.6.0</jackson.version>
		<spring.boot.version>1.2.7.RELEASE</spring.boot.version>

		<log4j2.version>2.3</log4j2.version>
		<log4j.version>1.2.17</log4j.version>
		<commons-logging.version>1.2</commons-logging.version>

		<druid.version>1.1.4</druid.version>
		<mysql.version>5.1.36</mysql.version>
		<mybaitsplus.version>3.0.2</mybaitsplus.version>
		<mybatis-pagehelper.version>5.0.1</mybatis-pagehelper.version>
		<mybatis-generator.version>1.3.5</mybatis-generator.version>
		<mybatis-ehcache.version>1.0.0</mybatis-ehcache.version>
		<ehcache.version>2.10.0</ehcache.version>

		<dubbo.version>2.5.3</dubbo.version>
		<xstream.version>1.4.8</xstream.version>
		<guava.version>19.0-rc2</guava.version>
		<gson.version>2.6.1</gson.version>
		<spring-data-jedis.version>1.7.4.RELEASE</spring-data-jedis.version>
		<jedis.version>2.9.0</jedis.version>
		<quartz.version>2.2.1</quartz.version>

		<!-- for maven compiler plugin -->
		<maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
		<maven_compiler_compilerVersion>1.8</maven_compiler_compilerVersion>
		<maven_compiler_source>1.8</maven_compiler_source>
		<maven_compiler_target>1.8</maven_compiler_target>
		<file_encoding>UTF-8</file_encoding>

		<maven_source_plugin_version>2.1.1</maven_source_plugin_version>
		<maven_jar_plugin_version>2.6</maven_jar_plugin_version>
		<maven_war_plugin_version>2.1.1</maven_war_plugin_version>
		<maven_install_plugin_version>2.3.1</maven_install_plugin_version>
		<maven_deploy_plugin_version>2.7</maven_deploy_plugin_version>
		<maven_surefire_plugin_version>2.17</maven_surefire_plugin_version>
		<maven_assembly_plugin_version>2.6</maven_assembly_plugin_version>
		<javassist.version>3.18.2-GA</javassist.version>
        
    </properties>
    
	<build>
	    <resources>
	       <resource>
	       	<directory>src/main/resources</directory>
	       </resource>
	       <resource>  
           <directory>src/main/java</directory>  
            <includes>  
                <include>**/*.xml</include>  
            </includes>  
        </resource>  
	    </resources>
		<plugins>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven_source_plugin_version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>${skip_maven_deploy}</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven_surefire_plugin_version}</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven_jar_plugin_version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven_war_plugin_version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven_install_plugin_version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven_deploy_plugin_version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven_compiler_plugin_version}</version>
					<configuration>
						<fork>true</fork>
						<source>${java_source_version}</source>
						<target>${java_target_version}</target>
						<encoding>${file_encoding}</encoding>
						<compilerArgs>
							<arg>-XX:MaxPermSize=512M</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring.boot.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<modules>
        <module>trace-client-model</module>
        <module>trace-service-start</module>
    </modules>
</project>